# oss-ready

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bootstrap-source.yml  ci.yml  oss-ready-bootstrap-pr.yml  oss-ready-bootstrap.yml
docs/: README.zh-CN.md
src/oss_ready/: __init__.py  cli.py  config.py  models.py  reporters.py  rules.py  scanner.py
tests/: test_cli.py  test_config.py  test_reporters.py  test_scanner.py
